resources/linkerd-servicemesh/linkerd-dst-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    linkerd.io/created-by: linkerd/helm stable-2.14.9
    meta.helm.sh/release-name: linkerd-control-plane
    meta.helm.sh/release-namespace: linkerd
  labels:
    app.kubernetes.io/managed-by: Helm
    linkerd.io/control-plane-component: destination
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-dst-http
  namespace: linkerd
spec:
  ports:
    - name: http
      port: 4191
      protocol: TCP
      targetPort: 4191
  selector:
    linkerd.io/control-plane-component: destination
  sessionAffinity: None
  type: ClusterIP
